Fixed spacing issues
Fixed sticky logo and spacing issues on about & skills pages. Migrated classes from individual css docs to style doc and made universal classes

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -105,9 +105,6 @@
     height: 100%;
 }
 
-.hard-shadow {
-    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
-}
 
 .dpcircle {
     background-color: var(--dk-purple);
