--- a/css/skills.css
+++ b/css/skills.css
@@ -9,12 +9,10 @@
         position: relative;
         background-color: var(--med-green);
         box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
-        margin-bottom: 10vh;
 }
 
 .dgcontent {
     position: relative;
     background-color: var(--dk-green);
     box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
-    margin-bottom: 10vh;
 }
