--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .logo {
-    position: fixed;
+    position: absolute;
     display: block;
     top: 10px;
     right: 10px;
@@ -57,9 +57,13 @@ body {
     background-color: var(--dk-purple);
     box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
     width: max-content;
-
-    margin-bottom: 10vh;
+    height: fit-content;
 }
+
+.spacing {
+    margin-bottom: 50vh;
+}
+
 
 .navigation {
     background-color: var(--dk-purple);
@@ -77,7 +81,17 @@ body {
     list-style-type: none;
 }
 
-.btncustom {
+.down-arrow{
+    background: transparent;
+    background-image: url('/images/arrowdown.svg');
+    background-repeat: no-repeat;
+    width: 100px;
+    height: auto;
+
+}
+
+
+.btncustom{
     background-color: var(--med-purple) !important;
     width: fit-content !important;
     box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
@@ -86,4 +100,70 @@ body {
 
 .btndark {
     background-color: var(--dk-purple) !important;
+}
+
+.hard-shadow {
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+}
+
+ /*h1 & h3*/ .mpheader {
+    background-color: var(--med-purple);
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+    width: max-content;
+text-align: center;
+
+}
+
+ /*h2*/ .dpheader {
+background-color: var(--dk-purple);
+box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+width: max-content;
+text-align: center;
+
+}
+
+ /*h4*/ .dgheader {
+background-color: var(--dk-green);
+box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+
+}
+
+
+.h3 {
+    font-family: 'Ruda', 'Sans Serif';
+    text-decoration: underline;
+    color: white;
+    font-size: medium;
+}
+
+
+.dgcontent {
+    position: relative;
+    background-color: var(--dk-green);
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+    width: 100%;
+
+}
+
+.mpcontent {
+    position: relative;
+    background-color: var(--med-purple);
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+    width: 100%;
+
+}
+
+.mgcontent {
+    position: relative;
+    background-color: var(--med-green);
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
+    width: 100%
+}
+
+.dpcircle {
+    background-color: var(--dk-purple);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.25);
 }
